--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,32 +1,57 @@
+alabaster==0.7.12
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
+astroid==2.11.5
 asttokens==2.0.5
 attrs==21.4.0
+Babel==2.10.1
 backcall==0.2.0
 backports.zoneinfo==0.2.1
+Backtesting==0.3.3
 beautifulsoup4==4.11.1
+black==22.3.0
 bleach==5.0.0
+bokeh==2.4.3
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
+click==8.1.3
+commonmark==0.9.1
+coverage==6.4
+cryptography==37.0.2
 cycler==0.11.0
 dateparser==1.1.1
 debugpy==1.6.0
 decorator==5.1.1
+default-mutable==0.1.0
 defusedxml==0.7.1
 dill==0.3.5.1
+distlib==0.3.4
+docformatter==1.4
+docutils==0.17.1
 entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
+filelock==3.7.0
+flake8==4.0.1
+flake8-black==0.3.3
+flake8-bugbear==22.4.25
+flake8-isort==4.1.1
 fonttools==4.33.3
 idna==3.3
 imageio==2.19.2
+imagesize==1.3.0
+importlib-metadata==4.11.4
 importlib-resources==5.7.1
+iniconfig==1.1.1
+invoke==1.7.1
 ipykernel==6.13.0
 ipython==8.3.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.0
+isort==5.10.1
 jedi==0.18.1
+jeepney==0.8.0
 Jinja2==3.1.2
 joblib==1.1.0
 jsonschema==4.5.1
@@ -36,14 +61,18 @@ jupyter-console==6.4.3
 jupyter-core==4.10.0
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==1.1.0
+keyring==23.5.1
 kiwisolver==1.4.2
+lazy-object-proxy==1.7.1
 llvmlite==0.38.1
 lxml==4.8.0
 MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
+mccabe==0.6.1
 mistune==0.8.4
 multitasking==0.0.10
+mypy==0.960
 mypy-extensions==0.4.3
 nbclient==0.6.3
 nbconvert==6.5.0
@@ -57,47 +86,85 @@ pandas==1.4.2
 pandas-ta==0.3.14b0
 pandocfilters==1.5.0
 parso==0.8.3
+pathspec==0.9.0
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.1.1
+pkginfo==1.8.2
+platformdirs==2.5.2
 plotly==5.8.0
+pluggy==1.0.0
 prometheus-client==0.14.1
 prompt-toolkit==3.0.29
 psutil==5.9.1
 ptyprocess==0.7.0
 pure-eval==0.2.2
+py==1.11.0
+pycodestyle==2.8.0
 pycparser==2.21
+pyflakes==2.4.0
 Pygments==2.12.0
+pylint==2.13.9
 pyparsing==3.0.9
 pyrsistent==0.18.1
+pytest==7.1.2
+pytest-cov==3.0.0
+pytest-flake8==1.1.1
+pytest-mypy==0.9.1
+pytest-pylint==0.18.0
 python-dateutil==2.8.2
 pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
 pyzmq==23.0.0
 qtconsole==5.3.0
 QtPy==2.1.0
+readme-renderer==35.0
 regex==2022.3.2
 requests==2.27.1
+requests-toolbelt==0.9.1
+rfc3986==2.0.0
+rich==12.4.4
 schedule==1.1.0
 scikit-learn==1.1.1
 scipy==1.8.1
+SecretStorage==3.3.2
 Send2Trash==1.8.0
 six==1.16.0
+snowballstemmer==2.2.0
 soupsieve==2.3.2.post1
+Sphinx==4.5.0
+sphinx-autodoc-typehints==1.18.1
+sphinx-rtd-theme==1.0.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 stack-data==0.2.0
 tenacity==8.0.1
 terminado==0.15.0
+testfixtures==6.18.5
 threadpoolctl==3.1.0
 tinycss2==1.1.1
+toml==0.10.2
+tomli==2.0.1
 tornado==6.1
+tox==3.25.0
 tqdm==4.64.0
 traitlets==5.2.1.post0
+twine==4.0.0
+typing_extensions==4.2.0
 tzdata==2022.1
 tzlocal==4.2
+untokenize==0.1.1
 urllib3==1.26.9
 vectorbt==0.23.3
+virtualenv==20.14.1
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.6.0
+wrapt==1.14.1
 yfinance==0.1.70
 zipp==3.8.0
